--- a/combine books.ipynb
+++ b/combine books.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -33,59 +33,61 @@
     }
    ],
    "source": [
-    "# def remove_unnecessary_chars(book):\n",
-    "#     def isValid(c):\n",
-    "#         return c in \"abcdefghijklmnopqrstuvwxyz1234567890 .;:?!&')(-*\"\n",
-    "#     return ''.join(c for c in book if isValid(c))\n",
+    "def remove_unnecessary_chars(book):\n",
+    "    def isValid(c):\n",
+    "        return c in \"abcdefghijklmnopqrstuvwxyz1234567890 .;:?!&')(-*\"\n",
+    "    return ''.join(c for c in book if isValid(c))\n",
     "\n",
     "\n",
-    "# #file path for where the book txts are\n",
-    "# book_path = 'project_books/'\n",
-    "# book_txt_paths = []\n",
-    "# books = []\n",
-    "# books_combined = ''\n",
+    "#file path for where the book txts are\n",
+    "book_path = 'project_books/'\n",
+    "book_txt_paths = []\n",
+    "books = []\n",
+    "books_combined = ''\n",
     "\n",
-    "# for root, dirs, files in os.walk(book_path):\n",
-    "#     #file names in files path\n",
-    "#     for file in files:\n",
-    "#         #create complete path to book\n",
-    "#         book_file_path = book_path+file\n",
+    "for root, dirs, files in os.walk(book_path):\n",
+    "    #file names in files path\n",
+    "    for file in files:\n",
+    "        #create complete path to book\n",
+    "        book_file_path = book_path+file\n",
     "        \n",
-    "#         book_txt_paths.append(book_file_path )\n",
-    "# #         print(book_file_path)\n",
-    "#         #open txt file\n",
-    "#         try:\n",
-    "#             book = open(book_file_path).read()\n",
-    "#             #clean the text\n",
-    "#             book = book.replace('\\n', '')\n",
-    "#             book = book.replace('\\r', '')\n",
-    "#             book = book.replace('\\ufeff', '')\n",
-    "#             book = book.replace('\\xa0', '')\n",
-    "#             book = book.lower()\n",
-    "#             #have the minimum characters in the book\n",
-    "#             book = remove_unnecessary_chars(book)\n",
+    "        book_txt_paths.append(book_file_path )\n",
+    "#         print(book_file_path)\n",
+    "        #open txt file\n",
+    "        try:\n",
+    "            book = open(book_file_path).read()\n",
+    "            #clean the text\n",
+    "            book = book.replace('\\n', '')\n",
+    "            book = book.replace('\\r', '')\n",
+    "            book = book.replace('\\ufeff', '')\n",
+    "            book = book.replace('\\xa0', '')\n",
+    "            book = book.replace('project gutenberg-tm', '')\n",
+    "            book = book.replace('project gutenberg-tm electronic', '')\n",
+    "            book = book.lower()\n",
+    "            #have the minimum characters in the book\n",
+    "            book = remove_unnecessary_chars(book)\n",
     "            \n",
-    "#             books.append(book)\n",
-    "#             #combine books together\n",
-    "#             books_combined += book\n",
-    "#         #some files don't have book texts\n",
-    "#         except:\n",
-    "#             print('passed: ', book_file_path)\n",
-    "#             pass\n",
+    "            books.append(book)\n",
+    "            #combine books together\n",
+    "            books_combined += book\n",
+    "        #some files don't have book texts\n",
+    "        except:\n",
+    "            print('passed: ', book_file_path)\n",
+    "            pass\n",
     "        \n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#store all the sentences in a txt file for quicker access\n",
-    "# f = open('books_combined.txt', 'w+')\n",
-    "# f.write(books_combined)\n",
-    "# f.close()"
+    "# store all the sentences in a txt file for quicker access\n",
+    "f = open('books_combined.txt', 'w+')\n",
+    "f.write(books_combined)\n",
+    "f.close()"
    ]
   },
   {
