--- a/run_models.ipynb
+++ b/run_models.ipynb
@@ -53,7 +53,7 @@
     "char_to_int = {}\n",
     "int_to_char = {}\n",
     "#turn characters into integers and integers into characters - chars should be sorted to keep consistency\n",
-    "for i, char in enumerate(sorted(set(sub_books_combined))):\n",
+    "for i, char in enumerate(sorted(set(books_combined))):\n",
     "    char_to_int[char] = i\n",
     "    int_to_char[i] = char\n",
     "    \n",
@@ -100,7 +100,7 @@
     "  \n",
     "\n",
     "sentence_length = 50\n",
-    "num_unique_chars = len(set(sub_books_combined))\n",
+    "num_unique_chars = len(set(books_combined))\n",
     "print(\"sentence_length: \", sentence_length)\n",
     "print(\"num unique_chars: \", num_unique_chars)\n",
     "\n",
@@ -117,7 +117,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "scrolled": true
+    "collapsed": true
    },
    "outputs": [
     {
@@ -319,65 +319,6 @@
     "plt.xlabel('epochs')\n",
     "plt.ylabel('loss')\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#model 8 loss values - 50 epochs\n",
-    "md_8_loss_values = [1.472209071724268,\n",
-    " 1.4322545148645418,\n",
-    " 1.4170395065514338,\n",
-    " 1.4077179455734967,\n",
-    " 1.401156905205231,\n",
-    " 1.3960505306511042,\n",
-    " 1.3912652623421546,\n",
-    " 1.387771923031158,\n",
-    " 1.3849767623745783,\n",
-    " 1.3820597656695923,\n",
-    " 1.379319299157843,\n",
-    " 1.377422666236445,\n",
-    " 1.3752918695434322,\n",
-    " 1.3737727290467083,\n",
-    " 1.371457945805044,\n",
-    " 1.3707019597353758,\n",
-    " 1.368975222297694,\n",
-    " 1.367884860059977,\n",
-    " 1.3662232881236607,\n",
-    " 1.3655074607106317,\n",
-    " 1.3649576068941842,\n",
-    " 1.3637895111346763,\n",
-    " 1.362820964516694,\n",
-    " 1.361936084596556,\n",
-    " 1.360674078088399,\n",
-    " 1.3597056277136161,\n",
-    " 1.3594131983531368,\n",
-    " 1.3584677821489157,\n",
-    " 1.3579722334849615,\n",
-    " 1.356572548734015,\n",
-    " 1.3565441420185114,\n",
-    " 1.3566137180147742,\n",
-    " 1.3551201154012216,\n",
-    " 1.3548179799908464,\n",
-    " 1.354164543909748,\n",
-    " 1.3535691786450392,\n",
-    " 1.3529858613428358,\n",
-    " 1.3525109123434298,\n",
-    " 1.3517916632319933,\n",
-    " 1.3516362233503298,\n",
-    " 1.3507998043846672,\n",
-    " 1.350470802286596,\n",
-    " 1.3499019659393199,\n",
-    " 1.3492363917828918,\n",
-    " 1.3492080820307142,\n",
-    " 1.3482953789423968,\n",
-    " 1.3477859384765456,\n",
-    " 1.3480470667892084,\n",
-    " 1.348177056285381,\n",
-    " 1.347517612715371]"
    ]
   },
   {
