file path change

--- a/Text_creation/Create_text_presentation.ipynb
+++ b/Text_creation/Create_text_presentation.ipynb
@@ -50,19 +50,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      " Loaded model from disk:  models/round2/weights-improvement-50-1.4556-bigger.hdf5\n",
-      "original sentence:  my house is in\n",
+      "original sentence:  i had a good day\n",
       "\n",
       "\n",
-      "my house is in the thrown to the states of the did not out at the boy of the charmile with prince andrew understanding to the strict particular the spect to asking a ready and the peasant exact man her feet passed everything desperation that she should call the reasoner and as a heart he had all the emperor was placed the whole army and reasons she should prove and the both side and there was the first proposed horses and such a stories of his whole door of a rejorcious and said the distactor and and bors and"
+      "i had a good day of the truth of the knees of the same purse and the since the room was doubt their own solitians to the country of the standard way of prustably and the construction of at the end of the same of a gious religion were reason that i do not stand him to the man had been the design and the time to recording the man with the man of the arms, the other service who had contributed the dead people, the horse went the true part of the man. nothing the doubt the the arm of a little face that they should "
      ]
     }
    ],
