--- a/Text_creation/passage_modeling_clean.ipynb
+++ b/Text_creation/passage_modeling_clean.ipynb
@@ -42,7 +42,7 @@
    "source": [
     "#returns a list of all the path weights and the architecture\n",
     "def get_weights_and_arch():\n",
-    "    round_path = \"models/\"\n",
+    "    round_path = \"../Modelling/models/\"\n",
     "    model_paths = []\n",
     "    for root, dirs, files in os.walk(round_path):\n",
     "        #file names in files path\n",
