--- a/Text_creation/Create_text_presentation.ipynb
+++ b/Text_creation/Create_text_presentation.ipynb
@@ -49,17 +49,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "original sentence:   today is very rainy\n",
+      "original sentence:  kjhkjh\n",
       "\n",
       "\n",
-      " today is very rainy replied to him on a thought of the own and a finishall position of the other he speaking this the one showed the sign of all she should say my heart the condition of the candle in the great of the deep and shoulder to contection the sound where the sense of the counts and when he was been seemed to be the army and my dear the works to make it with a company that he and the deess with her and that he was an officer and of his son so it was a hand and with his life of natural and the self-call me"
+      "kjhkjha, --and that the same proper, --he said the cunt could still on the lively again in the other stast of a door and her prosecutor that you went to see mitya heard and like the man of times, the prisoner was a long full thing and the hand with a sensible prisoner. so i should have been for her father with my own listening and in the track to the condemness in the father was a answer, she was all to have the conscience, and will go along me by the sort of place that i was all the refund with the m"
      ]
     }
    ],
