added case for inputed characters not in corpus

--- a/Text_creation/Create_text_presentation.ipynb
+++ b/Text_creation/Create_text_presentation.ipynb
@@ -49,17 +49,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "original sentence:  kjhkjh\n",
+      "original sentence:   dafadsfasdf\n",
       "\n",
       "\n",
-      "kjhkjha, --and that the same proper, --he said the cunt could still on the lively again in the other stast of a door and her prosecutor that you went to see mitya heard and like the man of times, the prisoner was a long full thing and the hand with a sensible prisoner. so i should have been for her father with my own listening and in the track to the condemness in the father was a answer, she was all to have the conscience, and will go along me by the sort of place that i was all the refund with the m"
+      " dafadsfasdful forth and sunday of the section 1. e. 8 or the part. look that they do think the sound of the through the morning that the beait you say, and they had a company of the soldier to see the strange of the white briding that at false said that dark whispered to forget to my lord. the canoe of the track of good heart for him in the room to the solical or project gutenberg-tm electronic works, and the street down and owner and the dog; and then he had a way of the little"
      ]
     }
    ],
