readme images/gif

--- a/Text_creation/Create_text_presentation.ipynb
+++ b/Text_creation/Create_text_presentation.ipynb
@@ -49,23 +49,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "original sentence:   dafadsfasdf\n",
+      "original sentence:   gone so soo\n",
       "\n",
       "\n",
-      " dafadsfasdful forth and sunday of the section 1. e. 8 or the part. look that they do think the sound of the through the morning that the beait you say, and they had a company of the soldier to see the strange of the white briding that at false said that dark whispered to forget to my lord. the canoe of the track of good heart for him in the room to the solical or project gutenberg-tm electronic works, and the street down and owner and the dog; and then he had a way of the little"
+      " gone so soon he was and the electronic of his being proposed to the body in the man felt it be are a god that looking at the contrary to see the part of her taken and fellow consideration the shadow and with it have a conversation to the people in government the army as the man of cheering to the chief. the were the commander seemed to the bedsaid i asked the desire of the more in the work and of the other and only the great was startly of the beside state of master of the fact seemed to convers the but wi"
      ]
     }
    ],
    "source": [
     "main()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
