cleaned for presentation

--- a/Text_creation/Create_text_presentation.ipynb
+++ b/Text_creation/Create_text_presentation.ipynb
@@ -49,17 +49,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "original sentence:   gone so soo\n",
+      "original sentence:   hello officer\n",
       "\n",
       "\n",
-      " gone so soon he was and the electronic of his being proposed to the body in the man felt it be are a god that looking at the contrary to see the part of her taken and fellow consideration the shadow and with it have a conversation to the people in government the army as the man of cheering to the chief. the were the commander seemed to the bedsaid i asked the desire of the more in the work and of the other and only the great was startly of the beside state of master of the fact seemed to convers the but wi"
+      " hello officere might possess such print and should the account of the sound of the proportion of men, and that the person, when the home and the princes of the fury made which had more than the sword had a beauty of the sight of the most his of the beauty are as a happy the most much that they do not be destroyed him to see a man and faces and have even could enter so many that the care of consideration of care, which they are being to be a man, and it is the mother and present with the care of the second pr"
      ]
     }
    ],
